Fix bug to prevent numbers overflowing the screen

--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: monospace;
 }
 
 button {
   background-color: #7E858F;
   color: #ffffff;
-  font-size: 18px;
+  font-size: 24px;
   border-radius: 5px;
   box-shadow: 0 3px black;
 }
@@ -23,8 +24,8 @@ button:active {
 
 #calculator {
   margin: 200px auto 0px;
-  width: 400px;
-  height: 500px;
+  width: 500px;
+  height: 620px;
   display: grid;
   gap: 10px;
   padding: 20px;
@@ -43,7 +44,7 @@ button:active {
 }
 
 #display {
-  display: block;
+  display: black;
   grid-area: display;
   padding: 10px 30px;
   background-color: #B8BABF;
@@ -55,9 +56,11 @@ button:active {
 }
 
 #screen {  
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 100%;
-  padding: 10px;
+  padding: 15px;
   text-align: right;
   background-color: #E6E7E9;
   border: 1px solid black;
@@ -65,15 +68,11 @@ button:active {
 }
 
 #input {
-  display: block;
-  height: 40%;
   font-size: 20px;
 }
 
 #output {
-  display: block;
-  height: 60%;
-  font-size: 38px;
+  font-size: 48px;
 }
 
 #clear {
